# vid_scraper

./: .gitignore  __init__.py  callbacks.py  data_entry.py  data_functions.py  generate_vid.py  import_polling_stations.py  insyte.py  main.py  old_cli.py  pyproject.toml  scrape_vid.py  vid.py  vids.py  voter.py  voter_data.db
kontakt_kreator/: __init__.py  autocomplete.py  board.py  callbacks.py  data_functions.py  insyte.py  old_cli.py  road_group.py  scrape_vid.py  vid.py  voter.py  ward.py
